# backend/app/api/v1/router.py
@@ -1,12 +1,13 @@
 from fastapi import APIRouter
 
-from app.api.v1 import admin_auth, admin_management, admin_stores, admin_uploads, auth, checkins, history, reviews, states, stores, users
+from app.api.v1 import admin_auth, admin_management, admin_messages, admin_stores, admin_uploads, auth, checkins, history, messages, reviews, states, stores, users
 
 
 router = APIRouter()
 router.include_router(auth.router)
 router.include_router(admin_auth.router)
 router.include_router(users.router)
+router.include_router(messages.router)
 router.include_router(stores.router)
 router.include_router(checkins.router)
 router.include_router(states.favorite_router)
@@ -16,3 +17,4 @@ router.include_router(reviews.router)
 router.include_router(admin_stores.router)
 router.include_router(admin_uploads.router)
 router.include_router(admin_management.router)
+router.include_router(admin_messages.router)
